Completely re-organized + docker-compose
